kompose/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Heilstah\scoop\apps\kompose\current\kompose.exe convert -f .\docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Heilstah\scoop\apps\kompose\current\kompose.exe convert -f .\docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: 1q2w3e4r
            - name: POSTGRES_USER
              value: postgres
          image: postgres:latest
          name: database
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/db_schema.sql
              name: database-cm0
              subPath: db_schema.sql
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: db_schema.sql
                path: db_schema.sql
            name: database-cm0
          name: database-cm0
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
