kompose/poll-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: poll-service
  name: poll-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: poll-service
  template:
    metadata:
      labels:
        io.kompose.service: poll-service
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: ConnectionStrings__PollDbConnection
              valueFrom:
                secretKeyRef:
                  name: mysql-db-secret
                  key: DbConnection
          image: shcherba/poll_service
          name: poll-service
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
