kompose/vote-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: vote-service
  name: vote-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vote-service
  template:
    metadata:
      labels:
        io.kompose.service: vote-service
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: ConnectionStrings__VoteDbConnection
              valueFrom:
                secretKeyRef:
                  name: db-secret
                  key: DbConnection
          image: vote-service
          name: vote-service
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
