kompose/poll_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: poll-service
  name: poll-service
spec:
  ports:
    - name: "poll-port"
      port: 5002
      targetPort: 8080
  selector:
    io.kompose.service: poll-service
