kompose/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  ports:
    - name: "rabbitmq-port"
      port: 5672
      targetPort: 5672
    - name: "rabbitmq-mgmt-port"
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
