kompose/vote_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: vote-service
  name: vote-service
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 8080
  selector:
    io.kompose.service: vote-service
