kompose/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: microservices.local
      http:
        paths:
          - path: /polls/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: poll-service
                port:
                  number: 5002
          - path: /votes(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vote-service
                port:
                  number: 5001
          - path: /realms/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-service
                port:
                  number: 5064
          - path: /resources/(.*\.css|.*\.js|.*\.png|.*\.woff|.*\.ico)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak-service
                port:
                  number: 5064
